2007-06-24  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/objc.lang: oops, forgot
	to test it!

2007-06-24  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/cpp.lang: forgot to remove
	headers globs and mime types from here.

2007-06-24  Yevgen Muntyan  <muntyan@tamu.edu>

	Objective-C highlighting. Added chdr.lang to use specifically
	with C/C++/ObjC headers, since C++ won't do anymore.

	* gtksourceview/language-specs/objc.lang: actual definitions.
	* gtksourceview/language-specs/chdr.lang: C headers highlighting.
	* gtksourceview/language-specs/cpp.lang: added a context to
	include from C headers.

	* gtksourceview/language-specs/check.sh: updated.
	* gtksourceview/language-specs/Makefile.am: added those files.

2007-06-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/css.lang:
	* gtksourceview/language-specs/javascript.lang:
	* gtksourceview/language-specs/makefile.lang:
	LGPL'ed.

	* gtksourceview/language-specs/styles.rng: updated.

	* gtksourceview/gtksourcestylescheme.c: removed ParserState struct
	left from old parser.

2007-06-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/csharp.lang:
	* gtksourceview/language-specs/desktop.lang:
	LGPL'ed.

2007-06-20  Yevgen Muntyan  <muntyan@tamu.edu>

	Removed leftovers (broken) of /regex/opts syntax in lang files;
	removed dot-match-all (doing nothing) regex option. Made
	default-regex-options element use attributes instead of content like "xi".

	* gtksourceview/gtksourcelanguage-parser-2.c: above changes: do not
	parse dot-match-all; handle new default-regex-options element format;
	do not strip slashes from patterns.

	* gtksourceview/language-specs/language2.rng:
	new default-regex-options format; removed dot-match-all.

	* gtksourceview/language-specs/c.lang:
	* gtksourceview/language-specs/convert.py:
	* gtksourceview/language-specs/csharp.lang:
	* gtksourceview/language-specs/css.lang: