@@ -116,7 +116,7 @@
         </attribute>
     </optional>
     <optional>
-        <attribute name="case-insensitive">
+        <attribute name="case-sensitive">
             <ref name="boolean-value"/>
         </attribute>
     </optional>
